--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-m
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Sentient Puzzle Game</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
+
